# whisper-s4y

./: .gitignore  .whisper2tflite.py.swp  LICENSE.txt  Pipfile  README.md  TFForceTokensLogitsProcessorPatch.py  add-metadata.py  assets.py  freeze.txt  mk_tflite.py  mk_tflite.sh  pyproject.toml  requirements.txt  requirements_.txt  settings.py  test.py  whisper2tflite.py
.github/workflows/: build-steps.yml  convert.yml  python-app.yml  release.yml
colab/: whisper_s4y_usage.ipynb
src/whisper_s4y/: Pipfile  __init__.py  __main__.py  config.py  convertor.py  pyproject.toml  test.py
src/whisper_s4y/features_extractor/: __init__.py  lib.py
src/whisper_s4y/tflite/: __init__.py
src/whisper_s4y/whisper/huggingface/: __init__.py  tf_logits_process_fix.py
src/whisper_s4y/whisper/huggingface/s4y_model/: decoder.py  generator.py  pcm_encoder.py
tests/: __init__.py  conftest.py
tests/integration/: ar.py  en.py
tests/units/: test_decoder.py  test_decoder_tflite.py  test_encoder.py  test_encoder_decoder.py  test_encoder_decoder_tflite.py  test_encoder_tflite.py  test_features_extractor.py  test_features_extractor_tflite.py  test_generator.py  test_generator_tflite.py  test_inf.py  test_pcm_encoder.py  test_pcm_encoder_tflite.py  test_stft.py  test_transformers.py
whisper_s4y/: assets.py  convertor.py
whisper_s4y/features_extractor/: __init__.py
whisper_s4y/whisper/: config.py
whisper_tflite/: TFForceTokensLogitsProcessorPatch.py  __main__.py  convertor.py  features_extractor.py  generator.py  test.py
whisper_tflite/generator/: huggingface.py
(+7 files in other folders)
